Changes in version 0.2.0.15-alpha - 2008-01-??
  o Minor bugfixes:
    - Fix configure.in logic for cross-compilation.

Changes in version 0.2.0.14-alpha - 2007-12-23
  o Major bugfixes:
    - Fix a crash on startup if you install Tor 0.2.0.13-alpha fresh
      without a datadirectory from a previous Tor install. Reported
      by Zax.
    - Fix a crash when we fetch a descriptor that turns out to be
      unexpected (it used to be in our networkstatus when we started
      fetching it, but it isn't in our current networkstatus), and we
      aren't using bridges. Bugfix on 0.2.0.x.
    - Fix a crash when accessing hidden services: it would work the first
      time you use a given introduction point for your service, but
      on subsequent requests we'd be using garbage memory. Fixed by
      Karsten Loesing. Bugfix on 0.2.0.13-alpha.
    - Fix a crash when we load a bridge descriptor from disk but we don't
      currently have a Bridge line for it in our torrc. Bugfix on
      0.2.0.13-alpha.

  o Major features:
    - If bridge authorities set BridgePassword, they will serve a
      snapshot of known bridge routerstatuses from their DirPort to
      anybody who knows that password. Unset by default.

  o Minor bugfixes:
    - Make the unit tests build again.
    - Make "GETINFO/desc-annotations/id/<OR digest>" actually work.
    - Make PublishServerDescriptor default to 1, so the default doesn't
      have to change as we invent new directory protocol versions.
    - Fix test for rlim_t on OSX 10.3: sys/resource.h doesn't want to
      be included unless sys/time.h is already included.  Fixes
      bug 553.  Bugfix on 0.2.0.x.
    - If we receive a general-purpose descriptor and then receive an
      identical bridge-purpose descriptor soon after, don't discard
      the next one as a duplicate.

  o Minor features:
    - If BridgeRelay is set to 1, then the default for
      PublishServerDescriptor is now "bridge" rather than "v2,v3".