@@ -25,6 +25,15 @@ AC_ARG_ENABLE(debug,
     CFLAGS="$CFLAGS -g"
 fi])
 
+#XXXX ideally, we should make this into a no-op, and detect whether we're
+#compiling for the iphone by using $target.
+AC_ARG_ENABLE(iphone,
+ AS_HELP_STRING(--enable-iphone, compile with iPhone support),
+ [if test x$enableval = xyes ; then
+   tor_cv_iphone=true
+   CFLAGS="$CFLAGS -D__DARWIN_UINX03 -DIPHONE"
+  fi])
+
 AC_ARG_ENABLE(cell-pool,
      AS_HELP_STRING(--disable-cell-pool, disable pool allocator for cells))
 
