@@ -2,6 +2,11 @@ Changes in version 0.2.0.15-alpha - 2008-01-??
   o Minor bugfixes:
     - Fix configure.in logic for cross-compilation.
 
+  o Minor features:
+    - Support compilation to target iPhone; patch from cjacker huang.
+      To build for iPhone, pass the --enable-iphone option to configure.
+
+
 Changes in version 0.2.0.14-alpha - 2007-12-23
   o Major bugfixes:
     - Fix a crash on startup if you install Tor 0.2.0.13-alpha fresh
